--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
     "docs/**/*.tsx",
     "docs/**/*.vue"
   ],
-  "references": [{
-    "path": "./tsconfig.node.json"
-  }]
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
