--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     }
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "@xuanmo/javascript-utils": "^0.0.35",
+    "@xuanmo/normalize.css": "^1.0.9",
+    "github-markdown-css": "^5.1.0",
+    "vite-plugin-vuedoc": "^3.1.3",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@types/node": "^17.0.24",
@@ -40,6 +45,7 @@
     "eslint-plugin-vue": "^8.6.0",
     "husky": "^7.0.4",
     "prettier": "2.6.2",
+    "sass": "^1.51.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.2",
     "vue-tsc": "^0.29.8"
