--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,21 +10,18 @@
     "jsx": "preserve",
     "sourceMap": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "lib": ["esnext", "dom"],
     "paths": {
-      "@/*": ["packages/*"]
+      "@": ["packages"],
+      "@/*": ["packages/*"],
+      "@doc/*": ["docs/*"],
     }
   },
   "include": [
-    "packages/**/*.ts",
-    "packages/**/*.d.ts",
-    "packages/**/*.tsx",
-    "packages/**/*.vue",
-    "docs/**/*.ts",
-    "docs/**/*.d.ts",
-    "docs/**/*.tsx",
-    "docs/**/*.vue"
+    "packages/**/*",
+    "docs/**/*",
+    "docs/**/*.md"
   ],
   "references": [
     {
