--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
   "dependencies": {
     "@xuanmo/javascript-utils": "^0.0.35",
     "@xuanmo/normalize.css": "^1.0.9",
-    "github-markdown-css": "^5.1.0",
-    "vite-plugin-vuedoc": "^3.1.3",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
   },
@@ -35,6 +33,7 @@
     "@typescript-eslint/parser": "^5.19.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "@xuanmo/vite-plugin-vuedoc": "^0.0.1",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
