chore: 修改 TS 编译配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,13 @@
     "resolveJsonModule": true,
     "isolatedModules": false,
     "lib": ["esnext", "dom"],
+    "skipLibCheck": true,
     "paths": {
       "@": ["packages"],
       "@/*": ["packages/*"],
       "@doc/*": ["docs/*"]
-    }
+    },
+    "types": ["vite/client"]
   },
   "include": ["packages/**/*", "docs/**/*", "docs/**/*.md"],
   "references": [
