--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@xuanmo/vite-plugin-vuedoc": "^0.0.1",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
@@ -40,6 +41,7 @@
     "sass": "^1.51.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.2",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^0.29.8"
   }
 }
