feat(input): 输入框功能完善

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     },
     "types": ["vite/client", "vite-plugin-svg-icons/client"]
   },
-  "include": ["packages/**/*", "docs/**/*", "docs/**/*.md"],
+  "include": ["packages/**/*", "docs/**/*", "docs/**/*.md", "./**/*.ts", "./**/*.tsx"],
   "references": [
     {
       "path": "./tsconfig.node.json"
