--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   ],
   "scripts": {
     "dev": "yarn workspace docs dev",
+    "build:docs": "yarn workspace docs build",
+    "build:lib": "yarn workspace @xuanmo/dynamic-form build",
     "prepare": "husky install",
     "prettier": "npx prettier --write .",
     "lint": "eslint . --ext js,ts,tsx,vue"
