chore: update packages.json

--- a/packages/package.json
+++ b/packages/package.json
@@ -49,5 +49,8 @@
     "vite": "^2.9.2",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^0.29.8"
+  },
+  "peerDependencies": {
+    "vue": "^3.2.25"
   }
 }
