--- a/packages/package.json
+++ b/packages/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@xuanmo/dynamic-form",
   "private": false,
-  "version": "0.0.1-demo.6",
+  "version": "0.0.1-demo.7",
   "author": {
     "name": "xuanmo",
     "email": "me@xuanmo.xin"
@@ -22,6 +22,7 @@
   "main": "./dist/d-form.umd.js",
   "module": "./dist/d-form.es.js",
   "types": "./dist/index.d.ts",
+  "license": "MIT",
   "dependencies": {
     "@xuanmo/javascript-utils": "^0.0.37",
     "vue": "^3.2.25",
