--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
       2
     ],
     "vue/multi-word-component-names": 0,
-    "vue/no-v-html": 0
+    "vue/no-v-html": 0,
+    "@typescript-eslint/no-non-null-assertion": 0
   }
 }
