--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "vue/multi-word-component-names": 0,
     "vue/no-v-html": 0,
     "@typescript-eslint/no-non-null-assertion": 0,
-    "@typescript-eslint/no-empty-function": 0
+    "@typescript-eslint/no-empty-function": 0,
+    "@typescript-eslint/no-explicit-any": 0
   }
 }
