--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,7 @@
   "type": "module",
   "dependencies": {
     "@xuanmo/javascript-utils": "^0.0.37",
+    "@xuanmo/normalize.css": "^1.0.9",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
   },
