--- a/packages/package.json
+++ b/packages/package.json
@@ -12,8 +12,11 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build && vue-tsc --emitDeclarationOnly -p tsconfig.build.json",
-    "preview": "vite preview"
+    "build": "vite build && npm run tsc",
+    "preview": "vite preview",
+    "tsc": "vue-tsc --emitDeclarationOnly -p tsconfig.build.json",
+    "clear": "rimraf dist",
+    "tsc:clear": "rimraf dist && npm run tsc"
   },
   "files": [
     "dist"
@@ -45,6 +48,7 @@
     "eslint-plugin-vue": "^8.6.0",
     "husky": "^7.0.4",
     "prettier": "2.6.2",
+    "rimraf": "^4.3.0",
     "sass": "^1.51.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.2",
