build: 依赖调整，去除工作区相同依赖

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint:tsc": "yarn workspace @xuanmo/dynamic-form tsc:clear"
   },
   "dependencies": {
-    "@xuanmo/datejs": "^1.0.9"
+    "@xuanmo/datejs": "^1.0.9",
+    "@xuanmo/javascript-utils": "^0.0.42"
   }
 }
