feat(Checkbox): 增加复选框组件

--- a/packages/tsconfig.build.json
+++ b/packages/tsconfig.build.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig",
-  "exclude": ["node_modules", "vite.config.ts"]
+  "exclude": ["node_modules", "vite.config.ts", "src/**/demo"]
 }
