CI: 自动部署脚本调整

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ build:
   stage: build
   only:
     refs:
-      - master
+      - develop
   script:
     - cd /htdocs/dynamic-form
     - git pull
