--- a/packages/package.json
+++ b/packages/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@xuanmo/dynamic-form",
   "private": false,
-  "version": "0.0.1-demo.25",
+  "version": "0.0.1-alpha.26",
   "author": {
     "name": "xuanmo",
     "email": "me@xuanmo.xin"
