--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,7 @@ jobs:
 
     - run: yarn
     - shell: bash
-      run: ./build.sh
+      run: ./build-lib.sh
     - run: cd packages && npm publish --access public
 
       env:
