--- a/packages/package.json
+++ b/packages/package.json
@@ -27,7 +27,7 @@
   "types": "./dist/src/index.d.ts",
   "license": "MIT",
   "dependencies": {
-    "@xuanmo/datejs": "^1.0.14",
+    "@xuanmo/validator": "^0.0.10",
     "vue": "^3.2.25"
   },
   "devDependencies": {
@@ -36,6 +36,7 @@
     "@typescript-eslint/parser": "^5.19.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "@xuanmo/datejs": "^1.0.15",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
