--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint:tsc": "yarn workspace @xuanmo/dynamic-form tsc:clear"
   },
   "dependencies": {
-    "@xuanmo/javascript-utils": "^0.0.42"
+    "@xuanmo/javascript-utils": "^0.0.42",
+    "@xuanmo/validator": "^0.0.11"
   }
 }
