--- a/packages/package.json
+++ b/packages/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@xuanmo/dynamic-form",
   "private": false,
-  "version": "0.0.1-alpha.38",
+  "version": "0.0.1-alpha.39",
   "author": {
     "name": "xuanmo",
     "email": "me@xuanmo.xin"
@@ -22,8 +22,8 @@
     "dist"
   ],
   "type": "module",
-  "main": "./dist/d-form.umd.js",
-  "module": "./dist/d-form.es.js",
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.es.js",
   "types": "./dist/src/index.d.ts",
   "license": "MIT",
   "dependencies": {
