ci: GitLab 自动推送测试

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,5 +4,6 @@ jobs:
   GitLab-Auto-Push:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - run: git remote add gitlab ${{ secrets.GITLAB }}
       - run: git push gitlab develop
