--- a/docs/package.json
+++ b/docs/package.json
@@ -14,16 +14,20 @@
   "type": "module",
   "dependencies": {
     "@xuanmo/normalize.css": "^1.0.9",
+    "qrcode": "^1.5.3",
+    "qs": "^6.11.1",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@types/node": "^17.0.36",
+    "@types/qrcode": "^1.5.0",
+    "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
-    "@xuanmo/vite-plugin-md-preview": "^0.0.9",
+    "@xuanmo/vite-plugin-md-preview": "^0.0.12",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
