--- a/.github/ISSUE_TEMPLATE/template-1-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/template-1-bug-report.yml
@@ -9,8 +9,8 @@ body:
         在提交 Bug 报告前，请注意：
 
         - 确认你的问题无法通过官方文档得到解决。
-        - 确认你搜索过 [历史 issue](https://github.com/D-xuanmo/dynamic-form/issues)，并且没有发现同样的问题。
-        - 如果不是反馈 Bug，请到 [Discussions 讨论区](https://github.com/D-xuanmo/dynamic-form/discussions) 发帖。
+        - 确认你搜索过 [历史 issue](https://github.com/D-xuanmo/dl-ui/issues)，并且没有发现同样的问题。
+        - 如果不是反馈 Bug，请到 [Discussions 讨论区](https://github.com/D-xuanmo/dl-ui/discussions) 发帖。
 
   - type: input
     id: reproduce
@@ -24,7 +24,7 @@ body:
     id: version
     attributes:
       label: Dynamic Form 版本
-      description: 你正在使用的 Dynamic Form 版本是多少？（请填写 node_modules/@xuanmo/dynamic-form/package.json 里实际安装的版本）
+      description: 你正在使用的 Dynamic Form 版本是多少？（请填写 node_modules/@xuanmo/dl-ui/package.json 里实际安装的版本）
       placeholder: 比如 0.0.1
     validations:
       required: true
