--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "dynamic-form",
+  "name": "dl-ui",
   "version": "1.0.0",
   "private": true,
-  "repository": "git@github.com:D-xuanmo/dynamic-form.git",
+  "repository": "git@github.com:D-xuanmo/dl-ui.git",
   "author": "xuanmo <me@xuanmo.xin>",
   "license": "MIT",
   "workspaces": [
@@ -12,11 +12,11 @@
   "scripts": {
     "dev": "yarn workspace docs dev",
     "build:docs": "yarn workspace docs build",
-    "build:lib": "yarn workspace @xuanmo/dynamic-form build",
+    "build:lib": "yarn workspace @xuanmo/dl-ui build",
     "prepare": "husky install",
     "prettier": "npx prettier --write .",
     "lint": "eslint . --ext js,ts,tsx,vue && npm run lint:tsc",
-    "lint:tsc": "yarn workspace @xuanmo/dynamic-form tsc:clear"
+    "lint:tsc": "yarn workspace @xuanmo/dl-ui tsc:clear"
   },
   "dependencies": {
     "@xuanmo/javascript-utils": "^0.0.42",
