refactor: v-model 去除 value 属性

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
     paths:
      - 'packages/package.json'
-     - '.github/workflows/node.js.yml'
+     - '.github/workflows/build.yml'
 
 jobs:
   publish-npm:
