--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -1,20 +1,8 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "dist",
-    "declaration": true,
-    "target": "esnext",
-    "useDefineForClassFields": true,
-    "module": "esnext",
-    "esModuleInterop": true,
-    "moduleResolution": "Node",
-    "strict": true,
-    "jsx": "preserve",
-    "sourceMap": true,
-    "resolveJsonModule": true,
-    "isolatedModules": false,
-    "lib": ["esnext", "dom"],
-    "skipLibCheck": true,
     "types": ["vite/client", "vite-plugin-svg-icons/client"]
   },
   "include": ["./**/*.ts", "./**/*.tsx", "./**/*.vue"]
