--- a/docs/package.json
+++ b/docs/package.json
@@ -23,29 +23,8 @@
     "@types/node": "^17.0.36",
     "@types/qrcode": "^1.5.0",
     "@types/qs": "^6.9.7",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@xuanmo/vite-plugin-md-preview": "^0.0.12",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.13.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-vue": "^8.6.0",
-    "husky": "^7.0.4",
     "markdown-it-shiki": "^0.5.1",
-    "prettier": "2.6.2",
-    "sass": "^1.51.0",
-    "shiki": "^0.10.1",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.2",
-    "vite-plugin-md": "^0.13.1",
-    "vite-plugin-svg-icons": "^2.0.1",
-    "vue-tsc": "^0.29.8"
+    "vite-plugin-md": "^0.13.1"
   }
 }
