--- a/package.json
+++ b/package.json
@@ -19,9 +19,33 @@
     "lint:tsc": "yarn workspace @xuanmo/dl-ui tsc:clear"
   },
   "dependencies": {
-    "@commitlint/cli": "^17.6.3",
-    "@commitlint/config-conventional": "^17.6.3",
+    "@xuanmo/datejs": "^1.0.15",
     "@xuanmo/javascript-utils": "^0.0.49",
     "@xuanmo/validator": "^0.0.11"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
+    "@types/node": "^17.0.36",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
+    "@vitejs/plugin-vue": "^2.3.1",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.13.0",
+    "husky": "^7.0.4",
+    "prettier": "2.6.2",
+    "rimraf": "^4.3.0",
+    "sass": "^1.51.0",
+    "typescript": "^5.0.2",
+    "vite": "^2.9.2",
+    "vue-tsc": "^1.6.5"
   }
 }
