--- a/packages/package.json
+++ b/packages/package.json
@@ -27,37 +27,16 @@
   "types": "./dist/src/index.d.ts",
   "license": "MIT",
   "dependencies": {
+    "@xuanmo/datejs": "^1.0.15",
     "@xuanmo/validator": "^0.0.13",
     "vue": "^3.2.25"
   },
   "devDependencies": {
-    "@types/node": "^17.0.36",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "@vitejs/plugin-vue-jsx": "^1.3.10",
-    "@xuanmo/datejs": "^1.0.15",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.13.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-vue": "^8.6.0",
-    "husky": "^7.0.4",
-    "prettier": "2.6.2",
-    "rimraf": "^4.3.0",
-    "sass": "^1.51.0",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.2",
-    "vite-plugin-svg-icons": "^2.0.1",
-    "vue-tsc": "^0.29.8"
+    "vite-plugin-svg-icons": "^2.0.1"
   },
   "peerDependencies": {
-    "vue": "^3.0.0",
-    "@xuanmo/validator": "^0.0.13"
+    "@xuanmo/validator": "^0.0.13",
+    "vue": "^3.0.0"
   },
   "keywords": [
     "dynamic-form",
