--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "yarn workspace docs dev",
     "build:docs": "yarn workspace docs build",
     "build:lib": "yarn workspace @xuanmo/dl-ui build",
-    "prepare": "husky install && chmod +x ./pre-start.sh && ./pre-start.sh",
+    "prepare": "husky install",
     "prettier": "npx prettier --write .",
     "lint": "eslint . --ext js,ts,tsx,vue && npm run lint:tsc",
     "lint:tsc": "yarn workspace @xuanmo/dl-ui tsc:clear"
