--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "dev": "yarn workspace docs dev",
     "build:docs": "yarn workspace docs build",
-    "build:lib": "yarn workspace @xuanmo/dl-ui build",
+    "build:lib": "yarn build:common && yarn workspace @xuanmo/dl-ui build",
     "build:common": "yarn workspace @xuanmo/dl-common build",
     "prepare": "husky install",
     "prettier": "npx prettier --write .",
