--- a/packages/dl-common/package.json
+++ b/packages/dl-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xuanmo/dl-common",
-  "private": true,
+  "private": false,
   "version": "0.0.1-alpha.1",
   "author": {
     "name": "xuanmo",
