--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "@xuanmo/datejs": "^1.0.15",
     "@xuanmo/javascript-utils": "^0.0.49",
-    "@xuanmo/validator": "^0.0.11"
+    "@xuanmo/validator": "^0.0.11",
+    "@xuanmo/common": "file:./packages/dl-common"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
