--- a/packages/dl-ui/package.json
+++ b/packages/dl-ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@xuanmo/dl-ui",
   "private": false,
-  "version": "0.0.1-alpha.70",
+  "version": "0.0.1-alpha.71",
   "author": {
     "name": "xuanmo",
     "email": "me@xuanmo.xin"
@@ -27,7 +27,7 @@
   "dependencies": {
     "@xuanmo/datejs": "^1.0.15",
     "@xuanmo/validator": "^0.0.13",
-    "@xuanmo/dl-common": "file:../dl-common",
+    "@xuanmo/dl-common": "latest",
     "vue": "^3.2.25"
   },
   "devDependencies": {
