--- a/packages/dl-ui/tsconfig.json
+++ b/packages/dl-ui/tsconfig.json
@@ -2,8 +2,12 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "dist",
-    "types": ["vite/client", "vite-plugin-svg-icons/client"]
+    "outDir": "dist"
   },
-  "include": ["./**/*.ts", "./**/*.tsx", "./**/*.vue"]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "**/*.d.ts"],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
