--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "dev": "yarn workspace docs dev",
     "build:docs": "yarn workspace docs build",
-    "build:lib": "yarn build:common && yarn workspace @xuanmo/dl-ui build",
+    "build:lib": "yarn workspace @xuanmo/dl-ui build",
     "build:common": "yarn workspace @xuanmo/dl-common build",
     "prepare": "husky install",
     "prettier": "npx prettier --write .",
@@ -21,9 +21,9 @@
   },
   "dependencies": {
     "@xuanmo/datejs": "^1.0.15",
+    "@xuanmo/dl-common": "workspace:*",
     "@xuanmo/javascript-utils": "^0.0.49",
-    "@xuanmo/validator": "^0.0.11",
-    "@xuanmo/common": "file:./packages/dl-common"
+    "@xuanmo/validator": "^0.0.11"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
@@ -50,5 +50,6 @@
     "typescript": "^5.0.2",
     "vite": "^2.9.2",
     "vue-tsc": "^1.6.5"
-  }
+  },
+  "packageManager": "yarn@3.1.0"
 }
