--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   ],
   "scripts": {
     "dev": "yarn workspace docs dev",
-    "build:docs": "yarn build:lib && yarn workspace docs build",
-    "build:lib": "yarn build:icons && yarn workspace @xuanmo/dl-ui build",
+    "build:docs": "yarn workspace docs build",
+    "build:lib": "yarn workspace @xuanmo/dl-ui build",
     "build:common": "yarn workspace @xuanmo/dl-common build",
-    "build:icons": "yarn build:common && yarn workspace @xuanmo/dl-icons build",
+    "build:icons": "yarn workspace @xuanmo/dl-icons build",
     "prepare": "husky install",
     "prettier": "npx prettier --write .",
     "lint": "eslint . --ext js,ts,tsx,vue && npm run lint:tsc",
