--- a/packages/dl-icons/package.json
+++ b/packages/dl-icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xuanmo/dl-icons",
-  "version": "0.0.1-alpha.3",
+  "version": "0.0.1",
   "author": {
     "name": "xuanmo",
     "email": "me@xuanmo.xin"
