--- a/packages/dl-ui/package.json
+++ b/packages/dl-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xuanmo/dl-ui",
-  "version": "0.0.2-beta",
+  "version": "0.0.2-beta.1",
   "author": {
     "name": "xuanmo",
     "email": "me@xuanmo.xin"
