--- a/packages/dl-common/package.json
+++ b/packages/dl-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xuanmo/dl-common",
-  "version": "0.0.2",
+  "version": "0.0.2-beta.1",
   "author": {
     "name": "xuanmo",
     "email": "me@xuanmo.xin"
