--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "vite-svg-loader": "^4.0.0",
     "vue-tsc": "^1.6.5"
   },
+  "engines": {
+    "node": ">= 16.17.0"
+  },
   "packageManager": "yarn@3.1.0"
 }
