--- a/packages/dl-common/package.json
+++ b/packages/dl-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xuanmo/dl-common",
-  "version": "0.0.2-beta.2",
+  "version": "0.0.2-beta.3",
   "author": {
     "name": "xuanmo",
     "email": "me@xuanmo.xin"
@@ -11,7 +11,7 @@
   },
   "main": "./dist/index.umd.js",
   "module": "./dist/index.es.js",
-  "types": "./dist/main.d.ts",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "vite build && npm run tsc",
     "tsc": "vue-tsc --emitDeclarationOnly -p tsconfig.json",
