fix: 修复 common 包构建报错问题

--- a/packages/dl-common/tsconfig.json
+++ b/packages/dl-common/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "dist"
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "exclude": ["src/**/*.scss"],
+  "exclude": ["src/**/demo", "src/**/*.scss"],
   "references": [
     {
       "path": "./tsconfig.node.json"
