--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@xuanmo/datejs": "^1.0.15",
     "@xuanmo/dl-common": "workspace:*",
     "@xuanmo/dl-icons": "workspace:*",
-    "@xuanmo/javascript-utils": "^0.0.49",
+    "@xuanmo/utils": "^0.0.1",
     "@xuanmo/validator": "^0.0.11"
   },
   "devDependencies": {
