--- a/packages/dl-common/package.json
+++ b/packages/dl-common/package.json
@@ -13,7 +13,7 @@
   "module": "./dist/index.es.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "vite build && npm run tsc",
+    "build": "yarn workspace @xuanmo/dl-icons build && vite build && npm run tsc",
     "tsc": "vue-tsc --emitDeclarationOnly -p tsconfig.json",
     "preview": "vite preview",
     "clear": "rimraf dist",
