--- a/packages/dl-ui/package.json
+++ b/packages/dl-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xuanmo/dl-ui",
-  "version": "0.0.2-beta.8",
+  "version": "0.0.2-beta.9",
   "author": {
     "name": "xuanmo",
     "email": "me@xuanmo.xin"
@@ -30,6 +30,8 @@
   },
   "peerDependencies": {
     "@xuanmo/validator": "^0.0.13",
+    "@xuanmo/dl-icon": "^0.0.3",
+    "@xuanmo/dl-common": "^0.0.2-beta.5",
     "vue": "^3.0.0"
   },
   "keywords": [
