--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "target": "esnext",
+    "target": "ESNext",
     "useDefineForClassFields": true,
-    "module": "esnext",
+    "module": "ESNext",
     "esModuleInterop": true,
     "moduleResolution": "Node",
     "strict": true,
@@ -11,7 +11,7 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "isolatedModules": false,
-    "lib": ["esnext", "dom"],
+    "lib": ["ESNext", "dom"],
     "skipLibCheck": true
   },
   "include": ["**/*.d.ts"]
