--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:icons": "yarn workspace @xuanmo/dl-icons build",
     "build:docs": "yarn workspace docs build",
     "build:lib": "yarn workspace @xuanmo/dl-ui build",
-    "prettier": "npx prettier --write .",
+    "prettier": "prettier --write .",
     "lint": "eslint . --ext js,ts,tsx,vue && npm run lint:tsc",
     "lint:tsc": "yarn workspace @xuanmo/dl-ui tsc:clear"
   },
@@ -38,6 +38,7 @@
     "@typescript-eslint/parser": "^5.59.6",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "@xuanmo/prettier-config": "latest",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
@@ -60,5 +61,6 @@
   "engines": {
     "node": ">= 16.17.0"
   },
-  "packageManager": "yarn@3.1.0"
+  "packageManager": "yarn@3.1.0",
+  "prettier": "@xuanmo/prettier-config"
 }
