--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,36 +4,8 @@
     "es2021": true
   },
   "parser": "vue-eslint-parser",
-  "parserOptions": {
-    "parser": "@typescript-eslint/parser"
-  },
-  "plugins": [
-    "@typescript-eslint",
-    "prettier"
-  ],
   "extends": [
-    "plugin:@typescript-eslint/recommended",
     "plugin:vue/vue3-recommended",
-    "prettier"
-  ],
-  "rules": {
-    "semi": 0,
-    "indent": [
-      "warn",
-      2
-    ],
-    "vue/multi-word-component-names": 0,
-    "vue/no-v-html": 0,
-    "@typescript-eslint/no-non-null-assertion": 0,
-    "@typescript-eslint/no-empty-function": 0,
-    "@typescript-eslint/no-explicit-any": 0,
-    "vue/valid-attribute-name": 0,
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": [
-      "error",
-      {
-        "ignoreRestSiblings": true
-      }
-    ]
-  }
+    "xuanmo"
+  ]
 }
