--- a/.github/workflows/build-common.yml
+++ b/.github/workflows/build-common.yml
@@ -18,10 +18,6 @@ jobs:
     - run: corepack enable
 
     - shell: bash
-      name: List workspace
-      run: ls -la
-
-    - shell: bash
       name: Log yarn version
       run: yarn -v
 
@@ -34,6 +30,10 @@ jobs:
 
     - name: Build
       run: yarn build:common
+
+    - shell: bash
+      name: List workspace
+      run: cd packages/dl-common && ls -la
 
     - name: Publish
       run: cd packages/dl-common && npm publish --access public
