--- a/packages/dl-common/package.json
+++ b/packages/dl-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xuanmo/dl-common",
-  "version": "0.0.4-beta.12",
+  "version": "0.0.4-beta.17",
   "author": {
     "name": "xuanmo",
     "email": "me@xuanmo.xin"
@@ -11,13 +11,13 @@
   },
   "main": "./dist/index.umd.js",
   "module": "./dist/index.es.js",
-  "types": "./dist/src/index.d.ts",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "yarn workspace @xuanmo/dl-icons build && vite build && npm run tsc",
-    "tsc": "vue-tsc --emitDeclarationOnly -p tsconfig.json",
+    "tsc": "vue-tsc --emitDeclarationOnly -p ./tsconfig.json",
     "preview": "vite preview",
     "clear": "rimraf dist",
-    "tsc:clear": "rimraf dist && npm run tsc"
+    "tsc:clear": "npm run clear && npm run tsc"
   },
   "peerDependencies": {
     "@xuanmo/validator": "^0.0.16"
