--- a/packages/dl-ui/package.json
+++ b/packages/dl-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xuanmo/dl-ui",
-  "version": "0.0.5-beta.7",
+  "version": "0.0.5-beta.8",
   "author": {
     "name": "xuanmo",
     "email": "me@xuanmo.xin"
@@ -27,7 +27,9 @@
     "@xuanmo/datejs": "^1.0.15"
   },
   "peerDependencies": {
-    "@xuanmo/validator": "^0.0.16"
+    "@xuanmo/validator": "^0.0.16",
+    "@xuanmo/dl-common": "^0.0.5-beta.3",
+    "@xuanmo/dl-icons": "^0.0.9"
   },
   "keywords": [
     "dynamic-form",
